--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
+html, body {
+  min-height: 100%;
+}
+
 body {
-  margin: 0;
+  margin: 20px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
